--- a/source/header/header.css
+++ b/source/header/header.css
@@ -11,6 +11,7 @@ header {
 
 .logo {
     margin-left: 25px;
+    width: 60px;
 }
 
 .header-content {
@@ -91,6 +92,9 @@ header {
     background-color: #234654;
     padding: 12px;
     border-radius: 50%;
+
+    width: 25px;
+    height: 25px;
 }
 
 /* tablet css */
