--- a/source/index.css
+++ b/source/index.css
@@ -17,7 +17,7 @@ main {
     display: flex;
     flex-direction: row;
 
-    height: 100%;
+    flex-grow: 1;
 }
 
 section {
@@ -25,7 +25,7 @@ section {
     padding: 20px;
 
     display: grid;
-    grid-template-rows: 3fr repeat(2, 0.5fr);
+    grid-template-rows: 600px repeat(2, 0.5fr);
     grid-template-columns: 1fr 0.5fr 1fr;
 
     grid-gap: 16px 16px;
@@ -57,5 +57,6 @@ snippets-statistics {
 }
 
 .taskbox {
+    grid-row-start: 4;
     grid-column: 1 / -1
 }
